# pyweierstrass

./: .readthedocs.yml  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
pyweierstrass/: weierstrass.py
tests/: test_invwp.py  test_wp.py  test_wpprime.py  test_wsigma.py  test_wzeta.py
